resources/nextcloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app: nextcloud
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:19.0.8-apache
          name: nextcloud
          ports:
            - containerPort: 80
              name: nextcloud
          volumeMounts:
            - name: nextcloud-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: nextcloud-persistent-storage
          persistentVolumeClaim:
            claimName: nextcloud-pv-claim
