resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default

spec:
  rules:
    - host: nextcloud.localhost
      http:
        paths:
          - backend:
              serviceName: nextcloud
              servicePort: 80
